ref: use SequencedCollection to get first or last element