@@ -45,8 +45,8 @@ public class DBase03RawDirectTest extends AbstractH2Test {
   public void computeTableRawDataBeginEnd77Test() {
     List<List<Object>> actual = getRawDataAll(7, 7);
 
-    assertEquals(expected.stream().filter(e -> e.get(0) == "7").count(), actual.size());
-    assertForRaw(expected.stream().filter(e -> e.get(0) == "7").collect(Collectors.toList()),
+    assertEquals(expected.stream().filter(e -> e.getFirst() == "7").count(), actual.size());
+    assertForRaw(expected.stream().filter(e -> e.getFirst() == "7").collect(Collectors.toList()),
         actual);
   }
 
@@ -54,7 +54,7 @@ public class DBase03RawDirectTest extends AbstractH2Test {
   public void computeTableRawDataBeginEnd57Test() {
     List<List<Object>> actual = getRawDataAll(5, 7);
 
-    Predicate<List<Object>> filter = e -> (e.get(0) == "5" | e.get(0) == "6" | e.get(0) == "7");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "5" | e.getFirst() == "6" | e.getFirst() == "7");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
@@ -64,7 +64,7 @@ public class DBase03RawDirectTest extends AbstractH2Test {
   public void computeTableRawDataBeginEnd67Test() {
     List<List<Object>> actual = getRawDataAll(6, 7);
 
-    Predicate<List<Object>> filter = e -> (e.get(0) == "6" | e.get(0) == "7");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "6" | e.getFirst() == "7");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
@@ -74,8 +74,8 @@ public class DBase03RawDirectTest extends AbstractH2Test {
   public void computeTableRawDataBeginEnd16Test() {
     List<List<Object>> actual = getRawDataAll(1, 6);
 
-    Predicate<List<Object>> filter = e -> (e.get(0) == "1" | e.get(0) == "2" | e.get(0) == "3"
-        | e.get(0) == "4" | e.get(0) == "5" | e.get(0) == "6");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "1" | e.getFirst() == "2" | e.getFirst() == "3"
+        | e.getFirst() == "4" | e.getFirst() == "5" | e.getFirst() == "6");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
@@ -85,8 +85,8 @@ public class DBase03RawDirectTest extends AbstractH2Test {
   public void computeTableRawDataBeginEnd811Test() {
     List<List<Object>> actual = getRawDataAll(8, 11);
 
-    Predicate<List<Object>> filter = e -> (e.get(0) == "8" | e.get(0) == "9"
-        | e.get(0) == "10" | e.get(0) == "11");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "8" | e.getFirst() == "9"
+        | e.getFirst() == "10" | e.getFirst() == "11");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
@@ -98,11 +98,11 @@ public class DBase03RawDirectTest extends AbstractH2Test {
 
     List<List<Object>> actual = getRawDataByColumn(cProfile, 8, 11);
 
-    Predicate<List<Object>> filter = e -> (e.get(0) == "8" | e.get(0) == "9"
-        | e.get(0) == "10" | e.get(0) == "11");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "8" | e.getFirst() == "9"
+        | e.getFirst() == "10" | e.getFirst() == "11");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
-    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.get(0), map.get(0))).collect(Collectors.toList()), actual);
+    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.getFirst(), map.getFirst())).collect(Collectors.toList()), actual);
   }
 
   @Test
@@ -110,11 +110,11 @@ public class DBase03RawDirectTest extends AbstractH2Test {
     CProfile cProfile = getCProfileByColumnName("FIRSTNAME");
     List<List<Object>> actual = getRawDataByColumn(cProfile, 8, 11);
 
-    Predicate<List<Object>> filter = e -> (e.get(0) == "8" | e.get(0) == "9"
-        | e.get(0) == "10" | e.get(0) == "11");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "8" | e.getFirst() == "9"
+        | e.getFirst() == "10" | e.getFirst() == "11");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
-    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.get(0), map.get(1))).collect(Collectors.toList()), actual);
+    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.getFirst(), map.get(1))).collect(Collectors.toList()), actual);
   }
 
   @Test
@@ -122,16 +122,16 @@ public class DBase03RawDirectTest extends AbstractH2Test {
     CProfile cProfile = getCProfileByColumnName("CITY");
     List<List<Object>> actual = getRawDataByColumn(cProfile, 8, 11);
 
-    Predicate<List<Object>> filter = e -> (e.get(0) == "8" | e.get(0) == "9"
-        | e.get(0) == "10" | e.get(0) == "11");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "8" | e.getFirst() == "9"
+        | e.getFirst() == "10" | e.getFirst() == "11");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
-    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.get(0), map.get(4))).collect(Collectors.toList()), actual);
+    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.getFirst(), map.get(4))).collect(Collectors.toList()), actual);
   }
 
   @Test
   public void computeTableRawDataTimestampTest() {
-    List<List<Object>> expectedLocal = expected.stream().filter(f -> f.get(0).equals("1")).toList();
+    List<List<Object>> expectedLocal = expected.stream().filter(f -> f.getFirst().equals("1")).toList();
     List<List<Object>> actual = getRawDataAll(1, 1);
 
     assertEquals(expectedLocal.size(), actual.size());
