@@ -47,8 +47,8 @@ public class DBase05RawEnumTest extends AbstractH2Test {
   public void computeTableRawDataBeginEnd77Test() {
     List<List<Object>> actual = getRawDataAll(7, 7);
 
-    assertEquals(expected.stream().filter(e -> e.get(0) == "7").count(), actual.size());
-    assertForRaw(expected.stream().filter(e -> e.get(0) == "7").collect(Collectors.toList()),
+    assertEquals(expected.stream().filter(e -> e.getFirst() == "7").count(), actual.size());
+    assertForRaw(expected.stream().filter(e -> e.getFirst() == "7").collect(Collectors.toList()),
         actual);
   }
 
@@ -56,7 +56,7 @@ public class DBase05RawEnumTest extends AbstractH2Test {
   public void computeTableRawDataBeginEnd57Test() {
     List<List<Object>> actual = getRawDataAll(5, 7);
 
-    Predicate<List<Object>> filter = e -> (e.get(0) == "5" | e.get(0) == "6" | e.get(0) == "7");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "5" | e.getFirst() == "6" | e.getFirst() == "7");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
@@ -66,7 +66,7 @@ public class DBase05RawEnumTest extends AbstractH2Test {
   public void computeTableRawDataBeginEnd67Test() {
     List<List<Object>> actual = getRawDataAll(6, 7);
 
-    Predicate<List<Object>> filter = e -> (e.get(0) == "6" | e.get(0) == "7");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "6" | e.getFirst() == "7");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
@@ -76,8 +76,8 @@ public class DBase05RawEnumTest extends AbstractH2Test {
   public void computeTableRawDataBeginEnd16Test() {
     List<List<Object>> actual = getRawDataAll(1, 6);
 
-    Predicate<List<Object>> filter = e -> (e.get(0) == "1" | e.get(0) == "2" | e.get(0) == "3"
-        | e.get(0) == "4" | e.get(0) == "5" | e.get(0) == "6");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "1" | e.getFirst() == "2" | e.getFirst() == "3"
+        | e.getFirst() == "4" | e.getFirst() == "5" | e.getFirst() == "6");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
@@ -87,8 +87,8 @@ public class DBase05RawEnumTest extends AbstractH2Test {
   public void computeTableRawDataBeginEnd811Test() {
     List<List<Object>> actual = getRawDataAll(8, 11);
 
-    Predicate<List<Object>> filter = e -> (e.get(0) == "8" | e.get(0) == "9"
-        | e.get(0) == "10" | e.get(0) == "11");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "8" | e.getFirst() == "9"
+        | e.getFirst() == "10" | e.getFirst() == "11");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
