@@ -656,78 +656,78 @@ public class DBaseRunnerTest extends AbstractH2Test {
   }
 
   private void thenRaw77(List<List<Object>> expected, List<List<Object>> actual) {
-    assertEquals(expected.stream().filter(e -> e.get(0) == "7").count(), actual.size());
-    assertForRaw(expected.stream().filter(e -> e.get(0) == "7").collect(Collectors.toList()), actual);
+    assertEquals(expected.stream().filter(e -> e.getFirst() == "7").count(), actual.size());
+    assertForRaw(expected.stream().filter(e -> e.getFirst() == "7").collect(Collectors.toList()), actual);
   }
 
   private void thenRaw57(List<List<Object>> expected, List<List<Object>> actual) {
-    Predicate<List<Object>> filter = e -> (e.get(0) == "5" | e.get(0) == "6" | e.get(0) == "7");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "5" | e.getFirst() == "6" | e.getFirst() == "7");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
   }
 
   private void thenRaw67(List<List<Object>> expected, List<List<Object>> actual) {
-    Predicate<List<Object>> filter = e -> (e.get(0) == "6" | e.get(0) == "7");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "6" | e.getFirst() == "7");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
   }
 
   private void thenRaw16(List<List<Object>> expected, List<List<Object>> actual) {
-    Predicate<List<Object>> filter = e -> (e.get(0) == "1" | e.get(0) == "2" | e.get(0) == "3"
-        | e.get(0) == "4" | e.get(0) == "5" | e.get(0) == "6");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "1" | e.getFirst() == "2" | e.getFirst() == "3"
+        | e.getFirst() == "4" | e.getFirst() == "5" | e.getFirst() == "6");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
   }
 
   private void thenRaw811(List<List<Object>> expected, List<List<Object>> actual) {
-    Predicate<List<Object>> filter = e -> (e.get(0) == "8" | e.get(0) == "9"
-        | e.get(0) == "10" | e.get(0) == "11");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "8" | e.getFirst() == "9"
+        | e.getFirst() == "10" | e.getFirst() == "11");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
   }
 
   private void thenRawTimestamp11(List<List<Object>> expected, List<List<Object>> actual) {
-    List<List<Object>> expectedLocal = expected.stream().filter(f -> f.get(0).equals("1")).toList();
+    List<List<Object>> expectedLocal = expected.stream().filter(f -> f.getFirst().equals("1")).toList();
 
     assertEquals(expectedLocal.size(), actual.size());
     assertForRaw(expectedLocal, actual);
   }
 
   private void thenRawFilterId811(List<List<Object>> expected, List<List<Object>> actual) {
-    Predicate<List<Object>> filter = e -> (e.get(0) == "8" | e.get(0) == "9"
-        | e.get(0) == "10" | e.get(0) == "11");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "8" | e.getFirst() == "9"
+        | e.getFirst() == "10" | e.getFirst() == "11");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
-    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.get(0), map.get(0))).collect(Collectors.toList()), actual);
+    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.getFirst(), map.getFirst())).collect(Collectors.toList()), actual);
   }
 
   private void thenRawFilterFirstName811(List<List<Object>> expected, List<List<Object>> actual) {
-    Predicate<List<Object>> filter = e -> (e.get(0) == "8" | e.get(0) == "9"
-        | e.get(0) == "10" | e.get(0) == "11");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "8" | e.getFirst() == "9"
+        | e.getFirst() == "10" | e.getFirst() == "11");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
-    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.get(0), map.get(1))).collect(Collectors.toList()), actual);
+    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.getFirst(), map.get(1))).collect(Collectors.toList()), actual);
   }
 
   private void thenRawFilterCity811(List<List<Object>> expected, List<List<Object>> actual) {
-    Predicate<List<Object>> filter = e -> (e.get(0) == "8" | e.get(0) == "9"
-        | e.get(0) == "10" | e.get(0) == "11");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "8" | e.getFirst() == "9"
+        | e.getFirst() == "10" | e.getFirst() == "11");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
-    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.get(0), map.get(4))).collect(Collectors.toList()), actual);
+    assertForRaw(expected.stream().filter(filter).map(map -> List.of(map.getFirst(), map.get(4))).collect(Collectors.toList()), actual);
   }
 
   private void thenRawRS77(List<List<Object>> expected, List<List<Object>> actual) {
-    assertEquals(expected.stream().filter(e -> e.get(0) == "7").count(), actual.size());
-    assertForRaw(expected.stream().filter(e -> e.get(0) == "7").collect(Collectors.toList()), actual);
+    assertEquals(expected.stream().filter(e -> e.getFirst() == "7").count(), actual.size());
+    assertForRaw(expected.stream().filter(e -> e.getFirst() == "7").collect(Collectors.toList()), actual);
   }
 
   private void thenRawRS57(List<List<Object>> expected, List<List<Object>> actual) {
-    Predicate<List<Object>> filter = e -> (e.get(0) == "5" | e.get(0) == "6" | e.get(0) == "7");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "5" | e.getFirst() == "6" | e.getFirst() == "7");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
@@ -735,7 +735,7 @@ public class DBaseRunnerTest extends AbstractH2Test {
   }
 
   private void thenRawRS67(List<List<Object>> expected, List<List<Object>> actual) {
-    Predicate<List<Object>> filter = e -> (e.get(0) == "6" | e.get(0) == "7");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "6" | e.getFirst() == "7");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
@@ -743,8 +743,8 @@ public class DBaseRunnerTest extends AbstractH2Test {
   }
 
   private void thenRawRS16(List<List<Object>> expected, List<List<Object>> actual) {
-    Predicate<List<Object>> filter = e -> (e.get(0) == "1" | e.get(0) == "2" | e.get(0) == "3"
-        | e.get(0) == "4" | e.get(0) == "5" | e.get(0) == "6");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "1" | e.getFirst() == "2" | e.getFirst() == "3"
+        | e.getFirst() == "4" | e.getFirst() == "5" | e.getFirst() == "6");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
@@ -752,8 +752,8 @@ public class DBaseRunnerTest extends AbstractH2Test {
   }
 
   private void thenRawRS811(List<List<Object>> expected, List<List<Object>> actual) {
-    Predicate<List<Object>> filter = e -> (e.get(0) == "8" | e.get(0) == "9"
-        | e.get(0) == "10" | e.get(0) == "11");
+    Predicate<List<Object>> filter = e -> (e.getFirst() == "8" | e.getFirst() == "9"
+        | e.getFirst() == "10" | e.getFirst() == "11");
 
     assertEquals(expected.stream().filter(filter).count(), actual.size());
     assertForRaw(expected.stream().filter(filter).collect(Collectors.toList()), actual);
