@@ -149,11 +149,11 @@ public class DBaseDuckDBTest extends AbstractDuckDBTest {
 
     /* Test GanttColumn API */
     List<GanttColumnCount> clobCharGantt = getGanttColumn(tableName, clobProfile, charProfile);
-    assertEquals(clobData, clobCharGantt.get(0).getKey());
+    assertEquals(clobData, clobCharGantt.getFirst().getKey());
     assertEquals(charVal, getGanttKey(clobCharGantt, charVal));
 
     List<GanttColumnCount> floatEnumGantt = getGanttColumn(tableName, floatProfile, enumProfile);
-    assertEquals(floatVal, Float.parseFloat(floatEnumGantt.get(0).getKey()));
+    assertEquals(floatVal, Float.parseFloat(floatEnumGantt.getFirst().getKey()));
 
     // TODO Fix ENUM support
     //assertEquals(enumVal, getGanttKey(floatEnumGantt, enumVal));
@@ -187,7 +187,7 @@ public class DBaseDuckDBTest extends AbstractDuckDBTest {
   private String getStackedColumnKey(String tableName, CProfile cProfile)
       throws BeginEndWrongOrderException, SqlColMetadataException {
     return dStore.getStacked(tableName, cProfile, GroupFunction.COUNT, null, 0, Long.MAX_VALUE)
-        .get(0)
+        .getFirst()
         .getKeyCount()
         .keySet()
         .iterator()
@@ -195,7 +195,7 @@ public class DBaseDuckDBTest extends AbstractDuckDBTest {
   }
 
   private String getGanttKey(List<GanttColumnCount> ganttColumnCountList, String filter) {
-    return ganttColumnCountList.get(0).getGantt()
+    return ganttColumnCountList.getFirst().getGantt()
         .entrySet()
         .stream()
         .filter(f -> f.getKey().equalsIgnoreCase(filter))
