@@ -151,7 +151,7 @@ public class DBaseMsSQLRegularBackendTest extends AbstractBackendSQLTest {
     assertNotNull(stackedColumns);
     assertFalse(stackedColumns.isEmpty());
 
-    StackedColumn column = stackedColumns.get(0);
+    StackedColumn column = stackedColumns.getFirst();
     assertEquals(4, column.getKeyCount().get("Electronics"));
     assertEquals(3, column.getKeyCount().get("Books"));
     assertEquals(3, column.getKeyCount().get("Clothing"));
