@@ -230,7 +230,7 @@ public class DBaseMySQLRSBackendTest extends AbstractBackendSQLTest {
     List<StackedColumn> stacked =
         dStore.getStacked(tableName, cProfile, GroupFunction.COUNT, null, 0, 4394908640000L);
 
-    assertEquals(3, stacked.get(0).getKeyCount().get(""));
-    assertEquals(1, stacked.get(0).getKeyCount().get("Test"));
+    assertEquals(3, stacked.getFirst().getKeyCount().get(""));
+    assertEquals(1, stacked.getFirst().getKeyCount().get("Test"));
   }
 }
