@@ -143,11 +143,11 @@ public class DBaseSQLiteTest extends AbstractSQLiteTest {
 
     /* Test GanttColumn API */
     List<GanttColumnCount> clobCharGantt = getGanttColumn(tableName, clobProfile, charProfile);
-    assertEquals(clobData, clobCharGantt.get(0).getKey());
+    assertEquals(clobData, clobCharGantt.getFirst().getKey());
     assertEquals(charVal, getGanttKey(clobCharGantt, charVal));
 
     List<GanttColumnCount> floatIntGantt = getGanttColumn(tableName, floatProfile, intProfile);
-    assertEquals(floatVal, Float.parseFloat(floatIntGantt.get(0).getKey()));
+    assertEquals(floatVal, Float.parseFloat(floatIntGantt.getFirst().getKey()));
 
     /* Test Raw data API */
     // Note: SQLite stores dates as TEXT, so timestamp conversion from external DB to BerkeleyDB
@@ -177,7 +177,7 @@ public class DBaseSQLiteTest extends AbstractSQLiteTest {
   private String getStackedColumnKey(String tableName, CProfile cProfile)
       throws BeginEndWrongOrderException, SqlColMetadataException {
     return dStore.getStacked(tableName, cProfile, GroupFunction.COUNT, null, 0, Long.MAX_VALUE)
-        .get(0)
+        .getFirst()
         .getKeyCount()
         .keySet()
         .iterator()
@@ -185,7 +185,7 @@ public class DBaseSQLiteTest extends AbstractSQLiteTest {
   }
 
   private String getGanttKey(List<GanttColumnCount> ganttColumnCountList, String filter) {
-    return ganttColumnCountList.get(0).getGantt()
+    return ganttColumnCountList.getFirst().getGantt()
         .entrySet()
         .stream()
         .filter(f -> f.getKey().equalsIgnoreCase(filter))
